# fundamentalist_tdd

./: README.md  pyproject.toml
app/: nabeatu.py
tests/: test_nabeatu.py
