[tool.poetry]
name = "fundamentalist-tdd"
version = "0.1.0"
description = ""
authors = ["Yohei Kokubo <yhei.register@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
